2008-09-09  Mike Kestner  <mkestner@novell.com>

	* generator/ReturnValue.cs: warning cleanup.
	* gtk/Gtk.metadata: warning cleanup.

2008-09-09  Zoltan Varga  <vargaz@gmail.com>

	* glib/GType.cs (FindTypeInReferences): Skip dynamic assemblies.

2008-09-08  Mike Kestner  <mkestner@novell.com>

	* glib/GType.cs: beef up the referenced assembly loading code to
	handle assemblies located in the same directory as the referring
	assembly.  Fixes #423450.

2008-09-05  Andrés G. Aragoneses  <aaragoneses@novell.com>

	Fixes BNC#387220.
	* glib/glue/signal.c: New glue file to call g_signal_query().
	* glib/glue/Makefile.am: Add signal.c.
	* glib/Signal.cs: check return type prior to emitting.

2008-08-28  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* atk/Util.custom: unregister get_root function when the setter
	receives null. Partial fix for BNC#411444.

2008-08-27  Mike Kestner  <mkestner@novell.com>

	* generator/ManagedCallString.cs: use existing Parameters.IsHidden
	method to check for hidden user data. 

2008-08-27  Mike Kestner  <mkestner@novell.com>

	* generator/ManagedCallString.cs: revert last change.  There are a
	lot of "broken" callback sigs out there which expose user data because
	it's not in the last parameter in the list.  I don't think we can 
	reasonably make a change to hide all those at this point.  This change
	at least hides all the user_data which comes right before a GError 
	param at the end of the list.  I need to follow up with a change which
	handles data parameters in any parameter position, but allows the user
	to mark "exposed" data params for compatibility reasons.
	* generator/Parameters.cs: hide data params which are at the end of a
	list behind an error param.
	* gtk/Gtk.metadata: mark an array parameter on 
	TextBufferDeserializeFunc.

2008-08-27  Mike Kestner  <mkestner@novell.com>

	* glib/Signal.cs: multiple dispose guarding for closures.

2008-08-27  Mike Kestner  <mkestner@novell.com>
