@@ -1,3 +1,7 @@
+2008-09-12  Mike Gorse <mgorse@novell.com>
+
+	* atk/Object.custom, atk/glue/object.c: Support GetIndexInParent.
+
 2008-09-09  Mike Kestner  <mkestner@novell.com>
 
 	* generator/ReturnValue.cs: warning cleanup.
